# atk_rkmedia_rv1126_yolov5_rtsp

./: README.md
yolov5/yolov5_rtsp/: CMakeLists.txt  yolov5_rtsp.cpp  yolov5_rtsp.h
yolov5_rtsp/: CMakeLists.txt  atk_yolov5_object_recognize.cpp  atk_yolov5_object_recognize.h  yolov5_object_recognize.cpp  yolov5_object_recognize.h  yolov5_rtsp.cpp
